<resources>
    <string name="common_navigation_drawer_open">Open navigation drawer</string>
    <string name="common_navigation_drawer_close">Close navigation drawer</string>
    <string name="common_settings">Settings</string>
    <string name="common_search">Search</string>
    <string name="common_help">Help</string>
    <string name="common_info">Info</string>
    <string name="common_privacy_policy">Privacy policy</string>
    <string name="common_terms_of_use">Terms of use</string>
    <string name="common_app_info">App info</string>
    <string name="common_open">Open</string>
    <string name="common_contacts">Contacts</string>
    <string name="common_warning">Warning</string>
    <string name="common_system_app_uninstall_error">System apps cannot be uninstalled.</string>
    <string name="common_call">Call</string>
    <string name="common_message">Message</string>
    <string name="common_select_phone_number">Select phone number</string>
    <string name="common_select_contact">Select contact</string>
    <string name="common_search_contacts">Search for contacts</string>
    <string name="common_no_contacts">No contacts found.</string>
    <string name="common_no_contact">No contact found.</string>
    <string name="common_select_profile">Accessibility profile</string>
    <string name="common_profile_auto">Auto</string>
    <string name="common_profile_simple">Simple</string>
    <string name="common_profile_intermediate">Intermediate</string>
    <string name="common_profile_advanced">Advanced</string>
    <string name="common_profile_color">Color profile</string>
    <string name="common_profile_color_main">Main</string>
    <string name="common_profile_color_contrast">Optimized for contrast</string>
    <string name="common_profile_color_impairement">Optimized for color impairement</string>
    <string name="common_profile_color_impairement_contrast">Optimized for color impairement and contrast</string>
    <string name="common_right_hand_setting">Right hand</string>
    <string name="common_dial">Dial</string>
    <string name="common_dial_instruction">Dial the number</string>
    <string name="common_day">Day</string>
    <string name="common_select_day">Select day</string>
    <string name="common_month">Month</string>
    <string name="common_select_month">Select month</string>
    <string name="common_year">Year</string>
    <string name="common_select_year">Select year</string>
    <string name="common_date_validation_error">Please correct the provided date.</string>
    <string name="common_on">On</string>
    <string name="common_off">Off</string>
    <string name="common_more">More</string>
    <string name="common_less">Less</string>
    <string name="common_size_selector" translatable="false">A</string>
    <string name="common_size">Size</string>
    <string name="common_hand">Preferred hand</string>
    <string name="common_hand_left">Left</string>
    <string name="common_hand_right">Right</string>
    <string name="common_gender">Gender</string>
    <string name="common_gender_hint">Please specify</string>
    <string name="common_male">Male</string>
    <string name="common_female">Female</string>
    <string name="common_other">Other</string>
    <string name="common_ithaca">ITHACA</string>
    <string name="common_ithaca_full">As you set out for Ithaka hope the voyage is a long one, full of
        adventure, full of discovery. Laistrygonians and Cyclops, angry Poseidon—don’t be afraid of
        them: you’ll never find things like that on your way as long as you keep your thoughts
        raised high, as long as a rare excitement stirs your spirit and your body. Laistrygonians
        and Cyclops, wild Poseidon—you won’t encounter them unless you bring them along inside your
        soul, unless your soul sets them up in front of you.
    </string>
    <string name="common_ithaca_full_short">As you set out for ITHACA hope the voyage is a long one, full of
        adventure, full of discovery. Laistrygonians and Cyclops, angry Poseidon—don’t be afraid of
        them: you’ll never find things like that on your way as long as you keep your thoughts
        raised high, as long as a rare excitement stirs your spirit and your body.</string>
    <string name="common_usability_settings">Usability settings</string>
    <string name="common_select_palette">Select your colour palette</string>
    <string name="demo_name" translatable="false">Mary Johnson</string>
    <string name="demo_number" translatable="false">6932713889</string>
    <string name="demo_time" translatable="false">Mon 23, 23:30pm</string>
    <string name="common_use_auto_setting">Use Auto setting</string>
    <string name="common_version">version</string>
    <string name="common_version_info">version %1$s</string>
    <string name="common_developer">Developer</string>
    <string name="common_katsuna_company" translatable="false">Katsuna GmbH</string>
    <string name="common_katsuna_address" translatable="false">Bahnhofstrasse 7\n6300 Zug, Switzerland.</string>
    <string name="common_age">Age</string>
    <string name="common_age_hint">Enter your age</string>
    <string name="common_color">Colour palettes</string>
    <string name="common_katsuna_contacts_app">Contacts</string>
    <string name="common_katsuna_messages_app">Messages</string>
    <string name="common_katsuna_calls_app">Calls</string>
    <string name="common_katsuna_keyboard_app">Keyboard</string>
    <string name="common_katsuna_homescreen_widget">Katsuna Homescreen widget</string>
    <string name="common_katsuna_clock">Clock</string>
    <string name="common_katsuna_calendar_app">Calendar</string>
    <string name="common_download">Download</string>
    <string name="common_download_app">Download %1$s app</string>
    <string name="common_katsuna_app_desc">Katsuna\'s %1$s app is specifically developed for accessibility. Press Continue to download the app from Google Play.</string>
    <string name="common_continue">Continue</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_go_to_settings_permissions">Permissions are missing. Please go to the application\'s Settings and grant the permissions needed.</string>
    <string name="common_call_notification_title" >Call Notification</string>
    <string name="common_call_notification_call" >Call back</string>
    <string name="common_call_notification_cancel" >Hide</string>
    <string name="common_call_notification_text" >You had a missed call from</string>
    <string name="common_text_notification_title" >The weather is good</string>
    <string name="common_text_notification_cancel" translatable="false">Hide</string>
    <string name="common_text_notification_text" translatable="false">Let’s go for a walk.</string>
    <string name="common_favorites">Favorites</string>
    <string name="common_create_contact">Create contact</string>
    <string name="common_edit_contact">Edit Contact</string>
    <string name="common_delete_contact">Delete Contact</string>
    <string name="common_delete_contact_approval">Are you sure you want to delete the contact: %1$s ?</string>
    <string name="common_save">Save</string>
    <string name="common_missing_app">You need to install the %1$s application.</string>
    <string name="common_add_contact">Add New Contact</string>
    <string name="common_add_to_existing_contact">Add to Existing Contact</string>
    <string name="common_missing_fields">Missing Fields</string>
    <string name="add_contact">Add contact</string>
    <string name="contacts_deleted">Deletion succeeded.</string>
    <string name="common_brightness_dark">Dark</string>
    <string name="common_brightness_light">Light</string>
    <string name="common_volume_silent">Silent</string>
    <string name="common_volume_loud">Loud</string>
    <string name="common_today">Today</string>
    <string name="common_browser_not_found">No application can handle this request. Please install a web browser</string>
</resources>