<?xml version="1.0" encoding="utf-8"?>
<com.katsuna.commons.controls.DemoProfile xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/demo_profile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:elevation="@dimen/common_selection_elevation"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/delete_call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/common_ic_delete_black54_24dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="5dp"
            android:layout_toStartOf="@id/delete_call_button"
            android:background="@drawable/common_ic_account_circle_grey70_40dp" />

        <ImageView
            android:id="@+id/createContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="2dp"
            android:padding="10dp"
            android:src="@drawable/common_ic_info_black54_24dp"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/createContact"
            android:layout_toStartOf="@id/photo"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/displayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/demo_name"
                android:textColor="@color/common_black87"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/demo_number"
                android:textColor="@color/common_black87"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_time"
                android:textColor="@color/common_black87"
                android:textSize="18sp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="56dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/message_button_container"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/message_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:drawablePadding="6dp"
                android:drawableStart="@drawable/common_ic_message_white_24dp"
                android:padding="4dp"
                android:text="@string/common_message"
                android:textAllCaps="false"
                android:textColor="@color/common_white"
                android:textSize="@dimen/common_title_text_size_advanced" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/call_button_container"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/call_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:drawablePadding="6dp"
                android:drawableStart="@drawable/common_ic_call_black_24dp"
                android:padding="4dp"
                android:text="@string/common_call"
                android:textAllCaps="false"
                android:textColor="@color/common_black"
                android:textSize="@dimen/common_title_text_size_advanced" />

        </FrameLayout>

    </LinearLayout>

</com.katsuna.commons.controls.DemoProfile>

